--- a/app/src/main/resources/templates/member/list.html
+++ b/app/src/main/resources/templates/member/list.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 
-<div data-th-replace="header :: header">header</div>
+<div data-th-replace="header :: header">머리말</div>
 
 <h1>회원</h1>
-<a data-th-href="@{form}" href="form.html">새 회원</a>
+<a data-th-href="@{/member/form}" href="form">새 회원</a>
 <table border='1'>
   <thead>
   <tr>
@@ -21,36 +21,35 @@
   </thead>
   <tbody>
   <tr data-th-each="member : ${list}" data-th-object="${member}">
-    <td data-th-text="*{no}">no</td>
+    <td data-th-text="*{no}">100</td>
     <td>
-      <img data-th-if="*{photo} != null"
-           data-th-src="@{'https://d7m3pp1h2679.edge.naverncp.com/zH4V8numw0/member/' + *{photo}(type=f,w=20,h=20,quality=90,align=4,ttype=jpg)}"
-      >
-      <img data-th-if="*{photo} == null" data-th-src='@{/img/default-photo.jpeg}' height='20px'>
-      <a data-th-href='@{/member/view(no=*{no})}' data-th-text="*{name}">name</a>
-    </td>
-    <td data-th-text="*{email}">email</td>
-    <td data-th-text="*{#dates.format(createdDate,'yyyy-MM-dd')}">createdDate
-    </td>
+      <img data-th-if="*{photo}"
+           data-th-src="@{'https://rljiyddk2675.edge.naverncp.com/68i0l8DhXa/member/' + *{photo}(type=f,w=20,h=20,ttype=jpg)}"
+           src="/img/default-photo.jpeg">
+      <img data-th-unless="*{photo}" height='20px' src='/img/default-photo.jpeg'>
+      <a data-th-href="@{view(no=*{no})}" data-th-text="*{name}" href="view.html">홍길동</a></td>
+    <td data-th-text="*{email}">hong@test.com</td>
+    <td data-th-text="${#dates.format(member.createdDate, 'yyyy-MM-dd')}">2024-03-27</td>
   </tr>
   </tbody>
 </table>
+
 <p>
   [
   <a data-th-if="${pageNo <= 1}">이전</a>
-  <a data-th-href="@{list(pageNo=${pageNo-1},pageSize=${pageSize})}"
+  <a data-th-href="@{list(category=${category},pageNo=${pageNo - 1},pageSize=${pageSize})}"
      data-th-if="${pageNo > 1}"
      href="list">이전</a>
   ]
-
   [
-  <a data-th-if="${pageNo >= page}">다음</a>
-  <a data-th-href="@{list(pageNo=${pageNo+1},pageSize=${pageSize})}"
-     data-th-if="${pageNo < page}"
+  <a data-th-if="${pageNo >= numOfPage}">다음</a>
+  <a data-th-href="@{list(category=${category},pageNo=${pageNo + 1},pageSize=${pageSize})}"
+     data-th-if="${pageNo < numOfPage}"
      href="list">다음</a>
   ]
 </p>
-<div data-th-replace="footer :: footer">hooter</div>
+
+<div data-th-replace="footer :: footer">꼬리말</div>
 
 </body>
 </html>
